# med-chain

./: README.md  pyproject.toml
sandbox/: accuracy.ipynb  bias.ipynb  recover_y_hat.ipynb  uncertainty.ipynb
scripts/: init_vllm.sh  install_vllm.sh
scripts/meluxina/: submit-large-parallel.sh  submit-sc-parallel.sh
scripts/titans/: run_server.sh
src/: main.py
src/clients/: pipes.py
src/clients/vllm/: client.py  models.py
src/components/: models.py  pretty_print.py  prompt.py
src/components/evaluator/: exact_match.py  interface.py
src/components/loader/: interface.py  models.py
src/components/loader/adapters/: __init__.py  base.py  mcqa.py
src/configs/: main.yaml
src/configs/dataset/: medmcqa.yaml  medqa.yaml
src/configs/model/: base.yaml  llama-2-13b.yaml  llama-2-70b.yaml  llama-2-7b.yaml
src/configs/prompt/: base.yaml  direct-zeroshot.yaml  fewshot-cot.yaml  zeroshot-cot.yaml
src/configs/system/: local.yaml  meluxina.yaml  titan.yaml
