[tool.poetry]
name = "version-3"
version = "0.1.0"
description = "A repositry holding the experiments of the paper 'Can Large Language Models Reason About Medical Question' version 3"
authors = ["Andreas Geert Motzfeldt <andreas@motzfeldt.dk>", "Valentin Liévin <example@mail.com>"]
license = "MIT"
readme = ["README.md"]

packages = [
  { from = "src", include = "clients" },
  { from = "src", include = "components" },
]

[tool.poetry.scripts]
experiment = 'src.main:run'

[tool.poetry.dependencies]
#shared
python = "^3.11"
loguru = "^0.7.2"
rich = "^13.6.0"
pydantic = "^2.5.0"
datasets = "^2.14.6"
transformers = "^4.35.2"
evaluate = "^0.4.1"
scipy = "^1.9.3"
jinja2 = "^3.1.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
poethepoet = "^0.24.3"
tenacity = "^8.2.3"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
poethepoet = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
commitizen = "^2.42.0"
ruff = "^0.1.6"

[tool.poe.tasks]
multi-medqa = "poetry run experiment --multirun dataset=medqa,medmcqa"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.git
    | \.pyx
    | \.venv
    | _build
    | build
    | dist
    | experiments
  )/
)
'''

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "ANN", # flake8-annotations
  "PL",  # pylint
  "I",   # isort
  "B",   # flake8-bugbear
  "N",   # pep8-naming
  "C",   # mccabe
  "S",   # flake8-bandit
  "G",   # flake8-logging-format
  "DTZ", # flake8-datetimez
  "ICN", # flake8-import-conventions
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "PTH", # flake8-use-pathlib
  "ARG", # flake8-unused-arguments
]

ignore = [
  "D100",    # undocumented-public-module
  "D104",    # undocumented-public-package
  "D105",    # undocumented-magic-method
  "D107",    # undocumented-public-init
  "ANN101",  # missing-type-self
  "ANN204",  # missing-return-type-special-method
  "B905",    # zip-without-explicit-strict
  "PLC1901", # compare-to-empty-string
  "PTH123",  # builtin-open
  "RET504",  # unnecessary-assign
  "DTZ011",  # naive-datetime
  "D205",    # 1 blank line required between summary line and description
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C",   # mccabe
  "D",   # pydocstyle
  "E",   # pycodestyle error
  "F",   # Pyflakes
  "G",   # flake8-logging-format
  "I",   # isort
  "N",   # pep8-naming
  "Q",   # flake8-quotes
  "S",   # flake8-bandit
  "T",   # pycodestyle
  "W",   # pycodestyle warning
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "BLE", # flake8-blind-except
  "COM", # flake8-commas
  "DJ",  # flake8-django
  "DTZ", # flake8-datetimez
  "EM",  # flake8-errmsg
  "ERA", # eradicate
  "EXE", # flake8-executable
  "FBT", # flake8-boolean-trap
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "NPY", # NumPy-specific rules
  "PD",  # pandas-vet
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # Pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "src/experiment",
]

# don't remove unsued imports from __init__.py files
ignore-init-module-imports = true

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.per-file-ignores]
"*/__init__.py" = [
  "F401", # unused-import
]
"tests/*" = [
  "S101",    # assert
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "PLR2004", # magic-value-comparison

]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
split-on-trailing-comma = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.pylint]
max-args = 8
